<resources>
    <string name="app_name">Gympo</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="title_trainings">Trainings</string>
    <string name="title_progress">Progress</string>
    <string name="title_profile">Profile</string>
    <string name="signIn">Sign In</string>
    <string name="signUp">Sign Up</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="email">Email</string>
    <string name="age">Age</string>
    <string name="password">Password</string>
    <string name="AccQuestion">Already have an account?</string>
    <string name="noAccQuestion">Don\'t have an account?</string>
    <string name="or"> - OR - </string>
    <string name="setTrainingTime"> Your training begins at: </string>
    <string name="setTime"> Ready </string>
    <string name="edit"> Edit </string>
    <string name="delete"> Delete </string>
    <string name="share"> Share </string>
    <string name="exercises">Exercises</string>
    <string name="trainings_list">Trainings list</string>
    <string name="table_timetable">timetable</string>
    <string name="table_exercises">exercises</string>
    <string name="table_sets">sets</string>
    <string name="log_in">Log in</string>
    <string name="sets">Sets: %d</string>
    <string name="fields_cannot_be_empty">Fields can not be empty!</string>
    <string name="update">Update</string>
    <string name="log_out">Log out</string>
    <string name="log_out_dialog">Are you sure you want to quit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="close">Close</string>
    <string name="cancel">Cancel</string>
    <string name="continue_button">Continue</string>
    <string name="ok">OK</string>
    <string name="oops">…Oops</string>
    <string name="error_updating_data">Error updating data!</string>
    <string name="index_number">Index number:</string>
    <string name="repeats">Repeats:</string>
    <string name="weight">Weight:</string>
    <string name="required_time">Required time:</string>
    <string name="rest_time">Rest time:</string>
    <string name="sets_header">Sets</string>
    <string name="cancel_login">Cansel</string>
    <string name="error_login">Error</string>
    <string name="facebook_app_id">1955850738065509</string>
    <string name="fb_login_protocol_scheme">fb1955850738065509</string>
    <string name="NameIsEmpty">Name can\'t be empty!</string>
    <string name="SurnameIsEmpty">Surname can\'t be empty!</string>
    <string name="emailIsEmpty">Email can\'t be empty!</string>
    <string name="emailIsNotContainSymbol">Email is not contain symbol @</string>
    <string name="passwordIsEmpty">Password can\'t be empty!</string>
    <string name="invalidLengthOfPassword">Invalid length of password!</string>
    <string name="trainee">No value</string>
    <string name="beginner">0 - 2 years</string>
    <string name="middle">2 - 5 years</string>
    <string name="skilled">5 years and more</string>


    <string-array name="weekdays">
        <item name="selector">- Select your training day -</item>
        <item name="monday">Monday</item>
        <item name="tuesday">Tuesday</item>
        <item name="wednesday">Wednesday</item>
        <item name="thursday">Thursday</item>
        <item name="friday">Friday</item>
        <item name="saturday">Saturday</item>
        <item name="sunday">Sunday</item>
    </string-array>

    <string-array name="aim">
        <item name="not_defined">Not defined</item>
        <item name="lose_weight">Lose weight</item>
        <item name="bulk_up">Bulk up</item>
        <item name="keep_trim">Keep trim</item>
    </string-array>

    <string-array name="language">
        <item name="english">English</item>
        <item name="russian">Russian</item>
    </string-array>

    <string-array name="experience">
        <item name="trainee">No value</item>
        <item name="beginner">0 - 2 years</item>
        <item name="middle">2 - 5 years</item>
        <item name="skilled">5 years and more</item>
    </string-array>
    <string name="title_activity_main_menu">MainMenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string-array name="profileFields">
        <item name ="name">Name</item>
        <item name ="surname">Surname</item>
        <item name ="age">Age</item>
        <item name ="height">Height</item>
        <item name ="weight">Weight</item>
        <item name ="aim">Aim</item>
        <item name ="experience">Experience</item>
    </string-array>


</resources>
