<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_signInEditName"
            style="@style/textInputStyle"
            app:layout_constraintBottom_toTopOf="@+id/layout_signUpEditSurname"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/signInEditName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/name"/>
            
        </android.support.design.widget.TextInputLayout>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:padding="10dp"
        app:buttonSize="icon_only"
        app:layout_constraintBottom_toTopOf="@+id/layout_signInEditName"
        app:layout_constraintEnd_toEndOf="@+id/layout_signInEditName"
        app:layout_constraintStart_toStartOf="@+id/layout_signInEditName"
        tools:ignore="MissingConstraints" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_signUpEditSurname"
            style="@style/textInputStyle"
            app:layout_constraintBottom_toTopOf="@+id/layout_signUpEditEmail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/signUpEditSurname"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/surname" />
        </android.support.design.widget.TextInputLayout>

        <!--<EditText-->
        <!--android:layout_width="300dp"-->
        <!--android:layout_height="40dp"-->
        <!--android:layout_gravity="center_horizontal"-->
        <!--android:hint="@string/surname"-->
        <!--android:text="@={viewModel.surname2reg}"-->
        <!--tools:layout_editor_absoluteX="55dp"-->
        <!--tools:layout_editor_absoluteY="194dp" />-->


        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_signUpEditEmail"
            style="@style/textInputStyle"
            app:layout_constraintBottom_toTopOf="@+id/layout_signUpEditPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/signUpEditEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"
                android:hint="@string/email" />
        </android.support.design.widget.TextInputLayout>

        <!--<EditText-->
        <!--android:layout_width="300dp"-->
        <!--android:layout_height="40dp"-->
        <!--android:layout_gravity="center_horizontal"-->
        <!--android:hint="@string/email"-->
        <!--android:text="@={viewModel.email2reg}"-->
        <!--tools:layout_editor_absoluteX="55dp"-->
        <!--tools:layout_editor_absoluteY="254dp" />-->

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_signUpEditPassword"
            style="@style/textInputStyle"
            app:layout_constraintBottom_toTopOf="@+id/SignUpButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/signUpEditPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>


        <!--<EditText-->
        <!--android:layout_width="300dp"-->
        <!--android:layout_height="40dp"-->
        <!--android:layout_gravity="center_horizontal"-->
        <!--android:hint="@string/password"-->
        <!--android:text="@={viewModel.password2reg}"-->
        <!--tools:layout_editor_absoluteX="55dp"-->
        <!--tools:layout_editor_absoluteY="327dp" />-->

        <Button
            android:id="@+id/SignUpButton"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@color/calmBlue"
            android:text="@string/signUp"
            android:textAllCaps="false"
            android:textColor="@color/headerText"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/or"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/or"
            android:textColor="@color/darkBlue"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/signInQuestion"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <RelativeLayout
            android:id="@+id/signInQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/questionIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/AccQuestion"
                android:textColor="@color/calmBlue"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/goToSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_toEndOf="@id/questionIn"
                android:text="@string/signIn"
                android:textColor="@color/brightBlue"
                android:textSize="16sp" />

        </RelativeLayout>

    <ProgressBar
        android:id="@+id/registryProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone" />

    </android.support.constraint.ConstraintLayout>