<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/gray"
    android:orientation="vertical"
    android:textSize="20sp">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_signInEditLogin"
        style="@style/textInputStyle"
        app:layout_constraintBottom_toTopOf="@+id/layout_signInEditPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/signInEditLogin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:text="@={viewModel.email2send}" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_signInEditPassword"
        style="@style/textInputStyle"
        app:layout_constraintBottom_toTopOf="@+id/signInButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/signInEditPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:text="@={viewModel.password2send}" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/signInButton"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="150dp"
        android:background="@color/calmBlue"
        android:onClick="@{() -> viewModel.onSignInClick()}"
        android:text="@string/log_in"
        android:textAllCaps="false"
        android:textColor="@color/headerText"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/signUpQuestion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="10dp"
        app:buttonSize="icon_only"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="72dp"
        tools:layout_editor_absoluteY="376dp" />


    <RelativeLayout
        android:id="@+id/signUpQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/questionUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/noAccQuestion"
            android:textColor="@color/calmBlue"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/goToSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_toEndOf="@id/questionUp"
            android:onClick="@{() -> viewModel.onSignUpClick()}"
            android:text="@string/signUp"
            android:textColor="@color/brightBlue"
            android:textSize="16sp" />

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/loginProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone" />

</android.support.constraint.ConstraintLayout>
